# MVANet

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  MVANet.py  Mvanet_complete.pth  README.md  SwinTransformer.py  api_app.py  cli.py  folder_monitor.py  image_paths.json  inference.py  logs.json  multi_gpu_flow_analysis.md  multi_gpu_overhead_analysis.md  pyproject copy.toml  pyproject.toml  run.py  task_history.json  test_large_batch.py  test_preprocess_overhead.py  test_preprocessing_mode.py  test_scheduling.py  test_timing_breakdown.py
inference-engine/: PLUGIN_GUIDE.md  README.md  pyproject.toml
inference-engine/src/inference_engine/: __init__.py  base.py  cli.py  engine.py  multi_gpu.py  registry.py
models/: MVANet.pth  swin_base_patch4_window12_384_22kto1k.pth
plugins/mvanet/: README.md  pyproject.toml
plugins/mvanet/src/inference_engine_mvanet/: SwinTransformer.py  __init__.py  model.py
plugins/template/: README.md  pyproject.toml
plugins/template/src/inference_engine_template/: __init__.py  model.py
scripts/: profile_full_pipeline.py  profile_pdfnet_pipeline.py  restore_scan_complete.py
src/: MVANet.py  __init__.py  engine.py  inference.py
src/models/: __init__.py  base.py  mvanet.py
static/: app.js  index.html  style.css
test_images/: processed_folders.yaml
