[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "oc-masker-workspace"
version = "0.1.0"
description = "OC Masker workspace - image segmentation with plugin architecture"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "oc-masker",
  "oc-masker-mvanet",
  "oc-masker-pdfnet",
  "onnx>=1.20.1",
  "onnxscript>=0.6.0",
  "tensorrt>=10.15.1.29",
]

[tool.hatch.build.targets.wheel]
# This is a workspace meta-package - only include empty marker file
only-include = ["scripts/"]

[tool.uv.sources]
torch = [
  {index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'"},
]
torchvision = [
  {index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'"},
]
oc-masker = { path = "oc_masker", editable = true }
oc-masker-mvanet = { path = "oc_masker_mvanet", editable = true }
oc-masker-pdfnet = { path = "oc_masker_pdfnet", editable = true }

[[tool.uv.index]]
explicit = true
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
